to lazy to write a report

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p id="x2">we at IoT-Cure made it our mission to save your IoT devices from online criminals</p>
         <p id="x2">we corporate with difrent IoT companys like HomeIQ</p>
         <p id="x2">but we also offer products like IoT Protaction for common people </p>
+        <p id="x2">btw check our <a href="https://github.com/IoT-cure">Github</a></p>
     </section>
     
     <section>
@@ -37,7 +38,11 @@
         <p>
             here are our current advertising posters    
     </p>
+    <div class="image-row">
         <img src="assets/poster1.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol">
+        <img src="assets/poster3.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol">
+        <img src="assets/poster2.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol">
+    </div>
     </section>
 
 </body>
