--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script defer  scr="app.js"></script>
+    <script defer src="app.js"></script>
     <title>IoT-cure | IoT security</title>
     <link rel="icon" type="img/jpg" href="assets/logo.png">
 </head>
@@ -17,7 +17,7 @@
         <a href="https://github.com/IoT-cure">
         <img src="assets/logo.png" width="300" id="lol"></a>
         <br>
-        <h1 style="scale: 2;">
+        <h1 style="transform: scale(2);">
             IoT-cure
         </h1>
         <h2 id="x2">
