--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             here are our current advertising posters    
     </p>
     <div class="image-row">
-        <img src="assets/poster1.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol">
-        <img src="assets/poster3.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol">
-        <img src="assets/poster2.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol">
+        <img src="assets/poster1.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol" id="lol2">
+        <img src="assets/poster3.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol" id="lol2">
+        <img src="assets/poster2.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));" id="lol" id="lol2">
     </div>
     </section>
 
