--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://iot-cure.github.io/IoT-Cure-Website/assets/logo.png">
     <meta property="og:url" content="https://iot-cure.github.io/IoT-Cure-Website/">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="google-site-verification" content="xJN7dhM5bHk89wrTpboDETQ2jrlZPac0r8HoPnV9Us4" />
 
 </head>
 
