--- a/404.html
+++ b/404.html
@@ -20,8 +20,10 @@
 </head>
 
 <body>
+    <section>
     <h1>Page Not Found</h1>
     <p>Oops! Looks like this page doesn't exist. Go back to <a href="/index.html">home</a>.</p>
+    </section>
 
 
 </body>
