added a disclamer that IoT-cure is not a real company

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     </section>
     
 <footer>
+    <p>also just as an disclamer IoT-cure is not a real company I made it for a school project</p>
+</footer>
+
+<footer>
   <p>© 2025 IoT-cure</p>
 </footer>
 
