--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section>
         <a href="https://github.com/IoT-cure">
-            <img src="assets/logo.png" width="300" id="lol" alt="IoT-cure logo" loading="lazy">></a>
+            <img src="assets/logo.png" width="300" id="lol" alt="IoT-cure logo" loading="lazy"></a>
         <br>
         <h1 style="transform: scale(2);">
             IoT-cure
