back to png because avif for somerason didnt work (need to fix later)

--- a/404.html
+++ b/404.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
     <title>IoT-cure | IoT security</title>
-    <link rel="icon" type="img/jpg" href="assets/logo.avif">
+    <link rel="icon" type="img/jpg" href="assets/logo.png">
     <meta name="description"
         content="IoT-cure protects your smart devices from hackers. Explore our IoT security services, partnerships, and helpful tools.">
 
     <meta property="og:title" content="IoT-cure – IoT Cybersecurity Solutions">
     <meta property="og:description" content="We protect your IoT devices from hackers. Learn how.">
-    <meta property="og:image" content="https://iot-cure.github.io/IoT-Cure-Website/assets/logo.avif">
+    <meta property="og:image" content="https://iot-cure.github.io/IoT-Cure-Website/assets/logo.png">
     <meta property="og:url" content="https://iot-cure.github.io/IoT-Cure-Website/">
     <meta name="twitter:card" content="summary_large_image">
 
