--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
     <title>IoT-cure | IoT security</title>
-    <link rel="icon" type="img/jpg" href="assets/logo.avif">
+    <link rel="icon" type="img/jpg" href="assets/logo.png">
     <meta name="description"    
         content="IoT-cure protects your smart devices from hackers. Explore our IoT security services, partnerships, and helpful tools.">
 
     <meta property="og:title" content="IoT-cure – IoT Cybersecurity Solutions">
     <meta property="og:description" content="We protect your IoT devices from hackers. Learn how.">
-    <meta property="og:image" content="https://iot-cure.github.io/IoT-Cure-Website/assets/logo.avif">
+    <meta property="og:image" content="https://iot-cure.github.io/IoT-Cure-Website/assets/logo.png">
     <meta property="og:url" content="https://iot-cure.github.io/IoT-Cure-Website/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="google-site-verification" content="xJN7dhM5bHk89wrTpboDETQ2jrlZPac0r8HoPnV9Us4" />
@@ -27,7 +27,7 @@
 
     <section>
         <a href="https://github.com/IoT-cure">
-            <img src="assets/logo.avif" width="300" id="lol" alt="IoT-cure logo" loading="lazy"></a>
+            <img src="assets/logo.png" width="300" id="lol" alt="IoT-cure logo" loading="lazy"></a>
         <br>
         <h1 style="transform: scale(2);">
             IoT-cure
@@ -51,11 +51,11 @@
             here are our current advertising posters
         </p>
         <div class="image-row">
-            <img src="assets/poster1.avif" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));"
+            <img src="assets/poster1.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));"
                 id="lol" id="lol2" alt="IoT security poster" loading="lazy">
-            <img src="assets/poster3.avif" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));"
+            <img src="assets/poster3.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));"
                 id="lol" id="lol2" alt="IoT security poster" loading="lazy">
-            <img src="assets/poster2.avif" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));"
+            <img src="assets/poster2.png" width="200px" style="filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));"
                 id="lol" id="lol2" alt="IoT security poster" loading="lazy">
         </div>
         <br>
